test/unique/neg/nested-class.check
nested-class.scala:14: error: expected unique result
  def m(): D @unique = {
      ^
one error found
